boilerplate + api init

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
       <p class="subtitle">
         A tool for finding art at the Smithsonian!
       </p>
+
+      <div>Search term: <input type="text" id="searchTerm" value="Cats" /></div>
+      
+      <div id = "interactivity">
+        <button onclick="myFunction()">Search!</button>
+      </div>
+
+      <div id="response-container"></div>
     </div>
   </section>
     <script src="./assets/js/script.js"></script>
