api request testing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SmARTool</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
   <section class="section">
@@ -22,8 +23,15 @@
         <button onclick="myFunction()">Search!</button>
       </div>
 
-      <div id="response-container"></div>
+      <div id="response-container">
+        <div id="accordian">
+            <img class="photo-section c1" src="">
+            <img class="photo-section c2" src="">
+            <img class="photo-section c3" src="">
+        </div>  
+      </div>
     </div>
+    
   </section>
     <script src="./assets/js/script.js"></script>
   </body>
