--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
         A tool for finding art at the Smithsonian!
       </p>
 
-      <div>Search term: <input type="text" id="searchTerm" value="Cats" /></div>
-      
+      <div>Search term: <input type="text" id="searchTerm" value="" /></div>
       <div id = "interactivity">
-        <button onclick="myFunction()">Search!</button>
+        <button onclick="keywordFunction()">Search!</button>
+      </div>
+      <div>Image URL: <input type="text" id="imageURL" value="" /></div>
+      <div id = "interactivity">
+        <button onclick="imguFunction()">Search!</button>
       </div>
 
       <div id="response-container"> 
