fixed search parameters

--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
       </p>
 
       <div>Search term: <input type="text" id="searchTerm" value="" /></div>
-      <div id = "interactivity">
+      <div class = "interactivity">
         <button onclick="keywordFunction()">Search!</button>
       </div>
       <div>Image URL: <input type="text" id="imageURL" value="" /></div>
-      <div id = "interactivity">
+      <div class = "interactivity">
         <button onclick="imguFunction()">Search!</button>
+      </div>
+      <input id="image-file" type="file" />
+      <div class = "interactivity">
+        <button onclick="imgUPFunction()">Search!</button>
       </div>
 
       <div id="response-container"> 
