--- a/index.html
+++ b/index.html
@@ -17,21 +17,20 @@
         A tool for finding art at the Smithsonian!
       </p>
 
-      <div>Search term: <input type="text" id="searchTerm" value="" /></div>
+      <div>Search term: <input type="text" id="searchInput" value="" /></div>
       <div class = "interactivity">
-        <button onclick="keywordFunction()">Search!</button>
+        <button id = "keyword-search" class="start-button" onclick="keywordFunction()" >Search!</button>
       </div>
       <div>Image URL: <input type="text" id="imageURL" value="" /></div>
       <div class = "interactivity">
-        <button onclick="imguFunction()">Search!</button>
+        <button id = "url-search" class="start-button" onclick="imguFunction()">Search!</button>
       </div>
-      <input id="image-file" type="file" />
+     <!-- <input id="image-file" type="file" />
       <div class = "interactivity">
         <button onclick="imgUPFunction()">Search!</button>
-      </div>
-
-      <div id="response-container"> 
-      </div>
+      </div> 
+    -->
+      <div id="response-container"> </div>
     </div>
     
   </section>
