CSS  and HTML updates

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
   <body>
   <section class="section">
     <div class="container">
-      <h1 class="title">
-        SmARTool
-      </h1>
+      
       <p class="subtitle">
         
       <div class="columns is-vcentered">
         <div class="column is-5">
-          <p class="bd-notification is-primary">SMITHSONIAN MATCHING ART RELEVANCE TOOL </p>
-          <p> Find your favorite types of art with a few clicks within the SmARTool</p>
+          <h1 class="title">
+            mARTY
+          </h1>
+          <p class="bd-notification is-primary">METROPOLITAN MATCHING ART RELEVANCE TOOL </p>
+          <p> Curate your personal interest 
+            within the Metropolitan 
+            Museum of Art before you 
+            arrive</p>
+
         </div>
         <div class="column">
           <div class="gallery">
@@ -52,6 +57,7 @@
                 <div class="control">
                   <input class="input" type="Upload-Photo" placeholder="">
                 </div>
+                <p>Enter a photo that peaks your interest. Our mARTY tool can match gallery items you may be interested in</p>
               </div>
             </form>
           </div>
@@ -62,6 +68,7 @@
                   <div class="control">
                     <input class="input" type="Enter-A-Key_word" placeholder="">
                   </div>
+                  <p>Maybe you are interested in an artist or a time period or just want to type a word, give it a try you can always change your search </p>
                 </div>
             </form>
           </div>
@@ -72,6 +79,7 @@
                   <div class="control">
                     <input class="input" type="Enter-An-HTML" placeholder="">
                   </div>
+                  <p>Have a link to art or a photo you like, we will search the vast library of the metropolitan to find a comparable piece of art</p>
                 </div>
               </form>
             </div>
