--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SmARTool</title>
+    <title>mARTy</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
@@ -14,9 +15,10 @@
       <div class="columns is-vcentered">
         <div class="column is-5">
           <h1 class="title">
-            mARTY
+            mARTy
           </h1>
-          <p class="bd-notification is-primary">METROPOLITAN MATCHING ART RELEVANCE TOOL </p>
+          <p class="bd-notification is-primary">METROPOLITAN</p>
+            <p> MATCHING ART RELEVANCE TOOL </p>
           <p> Curate your personal interest 
             within the Metropolitan 
             Museum of Art before you 
@@ -88,9 +90,15 @@ Find Your Art
   </div>
 </div>
 
-  <div id="response-container" style="display: none;"> </div>
+  <div id="response-container" style="display: none;"> 
+    <!--Need to find a good place for prior search terms- can see slightly in background-->
+    <div id="priorsearchterms"> </div>
+  </div>
 </div>
+
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="./assets/js/script.js"></script>
+
 </body>
 </html>
