--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <h1 class="title" id="home" >
             mARTy
           </h1>
-          <p class="bd-notification is-primary">METROPOLITAN MATCHING ART RELEVANCE TOOL </p>
+          <h1 class="bd-notification is-primary">METROPOLITAN MATCHING ART RELEVANCE TOOL </h1>
           <p> Curate your personal interest 
             within the Metropolitan 
             Museum of Art before you 
