--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             Home
           </a>
     
-          <a class="navbar-item" href = "#search">
+          <a class="navbar-item" href="#search">
             Search
           </a>
           <div class="navbar-item has-dropdown is-hoverable">
@@ -112,8 +112,7 @@
 Find Your Art
 </h2>
 <div>
-  <!--Need to find a good place for prior search terms- can see slightly in background-->
-  <div id="priorsearchterms"> </div>
+  
 <div class="columns">
   <div class="column">
     <form class="box-input">
@@ -154,11 +153,13 @@ Find Your Art
   </div>
   </div>
 </div>
-    <!--Need to find a good place for prior search terms- can see slightly in background-->
-
-  <div id="response-container" style="display: none;"> 
-    <div id="priorsearchterms" style="display: none;"> </div>
+<div class="tile is-ancestor">
+  <div class= "tile is-10" id="response-container" style="display: hidden;"> 
   </div>
+    <div class = "tile is-2 is-vertical" id="priorsearchterms" style="display: hidden;"> </div>
+    <p>You searched for</p>
+    </div>
+</div>
 </div>
 
 </section>
