--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item" href="#home">
+          <a class="navbar-item" href="#home" onclick="readyContainer()">
             Home
           </a>
     
-          <a class="navbar-item" href="#search">
+          <a class="navbar-item" href="#search" onclick="readyContainer()">
             Search
           </a>
           <div class="navbar-item has-dropdown is-hoverable">
