--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    
 
    <nav class="navbar has-shadow" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
@@ -68,6 +69,7 @@
         </div>
       </div>
     </nav>
+
   <section class="section">
     <div class="container">
   <div id = "main">
@@ -153,13 +155,9 @@ Find Your Art
   </div>
   </div>
 </div>
-<div class="tile is-ancestor">
-  <div class= "tile is-10" id="response-container" style="display: hidden;"> 
-  </div>
-    <div class = "tile is-2 is-vertical" id="priorsearchterms" style="display: hidden;"> </div>
-    <p>You searched for</p>
-    </div>
-</div>
+
+<div id="response-container" style="display: hidden;"> </div>
+
 </div>
 
 </section>
