--- a/index.html
+++ b/index.html
@@ -156,12 +156,28 @@ Find Your Art
   </div>
 </div>
 
-<div id="response-container" style="display: hidden;"> </div>
 
 
 </div>
 
 </section>
+
+<div id="response-container" style="display: hidden;"> </div>
+<nav class="navbar sticky" role="navigation" aria-label="dropdown navigation">
+  <div class="navbar-menu">
+    <div class="navbar-start">
+      <div class="navbar-item has-dropdown has-dropdown-up is-hoverable">
+        <a class="navbar-link">
+          Dropup
+        </a>
+
+        <div class="navbar-dropdown" id = "priorsearchterms">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="./assets/js/script.js"></script>
 
