--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Find Your Art
     <div class="navbar-start">
       <div class="navbar-item has-dropdown has-dropdown-up is-hoverable">
         <a class="navbar-link">
-          Dropup
+          Search Again
         </a>
 
         <div class="navbar-dropdown" id = "priorsearchterms">
