search again fixes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Find Your Art
           <input id="image-file" type="file" />
             <button id = "image-search" onclick="imgUPFunction()">Search!</button>
         </div>
-        <p>Enter a photo that piques your interest. Our mARTY tool can match gallery items you may be interested in</p>
+        <p>COMING SOON: Enter a photo that piques your interest. </p>
       </div>
     </form>
   </div>
